--- a/content/about.html
+++ b/content/about.html
@@ -1,5 +1,6 @@
 ---
-title: A New Item
+title: About
 ---
 
-Hi, I'm a new item!
+<h1><%= @item[:title] %></h1>
+<p>Hello, this is Jason's site. Interest in software, programming and open source. Dabbling around in Ruby, Perl and Javascript. </p>
