new blog post on pocketspruce rename

--- a/content/about.html
+++ b/content/about.html
@@ -3,4 +3,4 @@ title: About
 ---
 
 <h1><%= @item[:title] %></h1>
-<p>Hello, this is Jason's site. Interest in software, programming and open source. Dabbling around in Ruby, Perl and Javascript. </p>
+<p>From sunny Singapore. Interest in software, programming and open source. Dabbling around in Ruby, Perl and Javascript. </p>
