changed formatting in blog list page

--- a/content/list.html
+++ b/content/list.html
@@ -4,8 +4,8 @@ title: Blog
 
 <% sorted_articles.each do |post| %>
 	<div class='post'>
-		<h1><%= link_to post[:title], post.path %></h1>
-		<aside>Posted at: <%= post[:created_at] %></aside>
+		<h1><%= link_to post[:title], post.path %></h1><inline>Posted at: <%= post[:created_at] %></inline>
 	</div>
+	<br/>
 <% end %>
 <br />
