modified projects page including css

--- a/content/projects.html
+++ b/content/projects.html
@@ -2,8 +2,8 @@
 title: projects
 ---
 
+<h1><%= @item[:title] %></h1>
 <div class='post'>
-	<h1>Projects</h1>
 	<h2><a href='http://www.sprucekit.com'>Sprucekit</a></h2>
 	<article>A simple service which pulls a random article from the user's Pocket list and emails to the user's inbox.</article>
 </div>
