changed layout for blog post listings

--- a/content/list.html
+++ b/content/list.html
@@ -2,10 +2,10 @@
 title: blog 
 ---
 
+<h1><%= @item[:title] %></h1>
 <% sorted_articles.each do |post| %>
 	<div class='post'>
-		<h1><%= link_to post[:title], post.path %></h1><inline>Posted at: <%= post[:created_at] %></inline>
+		<h2><%= link_to post[:title], post.path %></h1><inline>Posted at: <%= post[:created_at] %></inline>
 	</div>
-	<br/>
 <% end %>
 <br />
